@@ -33,14 +33,6 @@ module Netzke
 
             # Default location of extjs library
             :ext_location              => defined?(Rails) && Rails.root.join("public", "extjs"),
-
-            # Default location of icons, relative to the root of the domain
-            :icons_uri                 => "/images/icons/",
-
-            # Default instance config
-            :default_config => {
-              # :persistent_config => true
-            }
           })
         end
 
